--- a/main.css
+++ b/main.css
@@ -49,8 +49,7 @@ strong {
   width: 200px;
   border-radius: 50%;
   margin: 0 auto;
-  background-repeat: no-repeat;
-  background-position: 50% 50%:
+  object-fit: cover;
 }
 
 #main .social {
